Modifying exitsuccess to log in case if firmware is same version, so CPLD update will happen

--- a/platform/mellanox/mlnx-fw-upgrade.j2
+++ b/platform/mellanox/mlnx-fw-upgrade.j2
@@ -243,7 +243,7 @@ function UpgradeASICFW() {
     fi
 
     if [[ "${_FW_CURRENT}" == "${_FW_AVAILABLE}" ]]; then
-        ExitSuccess "firmware is up to date"
+        LogInfo "firmware is up to date"
     else
         LogNotice "firmware upgrade is required. Installing compatible version..."
         RunCmd "${BURN_CMD} -i ${_FW_FILE}"
